--- a/data/osmconf.ini
+++ b/data/osmconf.ini
@@ -25,7 +25,7 @@ osm_user=no
 osm_changeset=no
 
 # keys to report as OGR fields
-attributes=name,highway,waterway,aerialway,aeroway,barrier,railway,man_made,oneway,sidewalk,lanes,cycleway,busway,abutters,bicycle_road,driving_side,ford,ice_road,incline,junction,lit,motorroad,moutain_pass,mtb_scale,mtb_scale_uphill,mtb_description,overtakeing,parking_condition,parking_lane,passing_places,sac_scale,service,surface,tactile_paving,tracktype,traffic_calming,trail_visibility,winter_road,power,public_transport,ref,address,is_in,place,amenity,natural,leisure,operator,shop,religion,denomination
+attributes=name,highway,waterway,aerialway,aeroway,barrier,railway,man_made,oneway,sidewalk,lanes,cycleway,busway,abutters,bicycle_road,driving_side,ford,ice_road,incline,junction,lit,motorroad,moutain_pass,mtb_scale,mtb_scale_uphill,mtb_description,overtakeing,parking_condition,parking_lane,passing_places,sac_scale,service,surface,tactile_paving,tracktype,traffic_calming,trail_visibility,winter_road,power,public_transport,ref,address,is_in,place,amenity,natural,leisure,operator,shop,religion,denomination,surface
 # keys that, alone, are not significant enough to report a node as a OGR point
 unsignificant=created_by,converted_by,source,time,ele,attribution
 # keys that should NOT be reported in the "other_tags" field
@@ -45,7 +45,7 @@ osm_user=no
 osm_changeset=no
 
 # keys to report as OGR fields
-attributes=name,highway,waterway,aerialway,aeroway,railway,barrier,man_made,oneway,sidewalk,lanes,cycleway,busway,abutters,bicycle_road,driving_side,ford,ice_road,incline,junction,lit,motorroad,moutain_pass,mtb_scale,mtb_scale_uphill,mtb_description,overtakeing,parking_condition,parking_lane,passing_places,sac_scale,service,surface,tactile_paving,tracktype,traffic_calming,trail_visibility,winter_road,power,public_transport,leisure,boundary
+attributes=name,highway,waterway,aerialway,aeroway,railway,barrier,man_made,oneway,sidewalk,lanes,cycleway,busway,abutters,bicycle_road,driving_side,ford,ice_road,incline,junction,lit,motorroad,moutain_pass,mtb_scale,mtb_scale_uphill,mtb_description,overtakeing,parking_condition,parking_lane,passing_places,sac_scale,service,surface,tactile_paving,tracktype,traffic_calming,trail_visibility,winter_road,power,public_transport,leisure,boundary,surface
 # keys that should NOT be reported in the "other_tags" field
 ignore=created_by,converted_by,source,time,ele,note,openGeoDB:,fixme,FIXME
 # uncomment to avoid creation of "other_tags" field
@@ -73,7 +73,7 @@ osm_user=no
 osm_changeset=no
 
 # keys to report as OGR fields
-attributes=name,type,aeroway,amenity,admin_level,railway,barrier,boundary,building,craft,geological,historic,land_area,landuse,leisure,man_made,military,natural,office,place,shop,sport,tourism,aerialway,operator,border_type,is_in,denomination,religon
+attributes=name,type,aeroway,amenity,admin_level,railway,barrier,boundary,building,craft,geological,historic,land_area,landuse,leisure,man_made,military,natural,office,place,shop,sport,tourism,aerialway,operator,border_type,is_in,denomination,religon,surface
 # keys that should NOT be reported in the "other_tags" field
 ignore=area,created_by,converted_by,source,time,ele,note,openGeoDB:,fixme,FIXME
 # uncomment to avoid creation of "other_tags" field
